[gd_scene load_steps=7 format=3 uid="uid://cdc3ubfifx2di"]

[ext_resource type="PackedScene" uid="uid://2bvqp5i8uw1v" path="res://src/core/HealthComponent/HealthComponent.tscn" id="1_gjtvy"]
[ext_resource type="Script" uid="uid://bg8mf4un3kv6f" path="res://src/core/DamageRay/demo/item_to_destroy.gd" id="1_u1hde"]
[ext_resource type="Texture2D" uid="uid://ct6kbx46t62kc" path="res://src/Player/dziadu-french.png" id="3_5x33j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7uw6y"]
albedo_texture = ExtResource("3_5x33j")
uv1_scale = Vector3(3, 2, 1)
uv1_offset = Vector3(-0.015, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_d1k3y"]
material = SubResource("StandardMaterial3D_7uw6y")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5x33j"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[node name="ItemToDestroy" type="RigidBody3D"]
script = ExtResource("1_u1hde")

[node name="HealthComponent" parent="." instance=ExtResource("1_gjtvy")]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35413, 0)
billboard = 1
text = "100"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_d1k3y")
skeleton = NodePath("../Label3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("ConvexPolygonShape3D_5x33j")

[connection signal="health_changed" from="HealthComponent" to="." method="_health_changed"]
[connection signal="killed" from="HealthComponent" to="." method="_on_killed"]
